syntax = "proto3";
package pictophone;

import "google/protobuf/any.proto";

service Pictophone1_0 {
    rpc JoinGame (JoinGameRequest) returns (Empty);
    rpc StartGame (StartGameRequest) returns (Empty);
    rpc MakeMove (MakeMoveRequest) returns (Empty);

    rpc GetGame(GetGameRequest) returns (stream GetGameResponse);
}

message AnyAction {
    oneof version {
        Action1_0 v1_0 = 1;
    }
}

message Action1_0 {
    oneof action {
        JoinGameRequest join = 1;
        StartGameRequest start = 2;
        MakeMoveRequest move = 3;
    }
}

message JoinGameRequest {
    string game_id = 1;
    string player_id = 2;
}

message StartGameRequest {
    string game_id =1;
    string player_id = 2;
}

message MakeMoveRequest {
    string game_id = 1;
    string player_id = 2;
    Submission submission = 3;
}

message Empty {}

message GetGameRequest {
    string player_id = 1;
    string game_id = 2;
}

message GetGameResponse {
    bool exists = 1;
    Game game = 2;
}

message Game {
    repeated string players = 1;
    oneof state {
        Empty unstarted = 2;
        Empty first_prompt = 3;
        Empty waiting_for_prompt = 4;
        Submission respond_to_prompt = 5;
        FinishedGame finished = 6;
    }
}

message FinishedGame {
    repeated Series series = 1;
}

message Series {
    repeated Entry entries = 1;
}

message Entry {
    string player_id = 1;
    Submission submission = 2;
}

message Submission {
    oneof medium {
        string word = 1;
        string drawing_id = 2;
    }
}